--- a/aoc_3_1/Cargo.toml
+++ b/aoc_3_1/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "common"
+name = "aoc_3_1"
 version = "0.1.0"
 authors = ["Cory Todd <cory@ardonyx.io>"]
 edition = "2018"
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+common = { path = "../common" }
